# coco-segmentation-toolkit

./: README.md  pyproject.toml  python_code.ipynb  requirements.txt
