[project]
name = "coco-segmentation"
version = "0.1.0"
description = "Training a DeepLabV3 segmentation model on COCO using PyTorch"
authors = [{ name = "Your Name", email = "your@email.com" }]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "matplotlib",
    "numpy",
    "Pillow",
    "tqdm"
]

[build-system]
requires = ["uv"]
build-backend = "uv"
